<?xml version="1.0" encoding="UTF-8"?>
<!--
STS PARENT POM
-->
<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.vmware.vfabric.ide.eclipse.tcserver</groupId>
	<artifactId>com.vmware.vfabric.ide.eclipse.tcserver.parent</artifactId>
	<version>3.9.10-SNAPSHOT</version>
	<packaging>pom</packaging>

	<scm>
		<connection>https://github.com/spring-projects/eclipse-integration-tcserver.git</connection>
		<tag>HEAD</tag>
		<url>https://github.com/spring-projects/eclipse-integration-tcserver</url>
	</scm>

	<modules>
		<module>com.vmware.vfabric.ide.eclipse.tcserver-feature</module>
		<module>com.vmware.vfabric.ide.eclipse.tcserver.core</module>
		<module>com.vmware.vfabric.ide.eclipse.tcserver.reloading</module>
		<module>com.vmware.vfabric.ide.eclipse.tcserver.livegraph</module>
		<module>com.vmware.vfabric.ide.eclipse.tcserver.tests</module>
		<module>com.vmware.vfabric.ide.eclipse.tcserver.tests.ui</module>
		<module>com.vmware.vfabric.ide.eclipse.tcserver.ui</module>

		<module>com.vmware.vfabric.ide.eclipse.tcserver.site</module>
	</modules>

	<!-- Common Configuration -->
	<organization>
		<name>Pivotal, Inc.</name>
		<url>https://pivotal.io</url>
	</organization>
	<url>https://spring.io/tools</url>
	<inceptionYear>2007</inceptionYear>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<issueManagement>
		<url>https://github.com/spring-projects/eclipse-integration-tcserver/issues</url>
		<system>GitHub</system>
	</issueManagement>

	<ciManagement>
		<url>https://build.spring.io/browse/IDE</url>
		<system>BAMBOO</system>
	</ciManagement>

	<licenses>
		<license>
			<name>Eclipse Public License v1.0</name>
			<url>https://www.eclipse.org/legal/epl-v10.html</url>
		</license>
	</licenses>

	<properties>
		<!-- Eclipse Integration Commons Properties -->
		<p2.qualifier>SNAPSHOT</p2.qualifier>
		<p2.sign>false</p2.sign>
		<p2.repository.name>Pivotal tc Server Integration for Eclipse</p2.repository.name>

		<!-- Signing -->
		<signing.skip>true</signing.skip>
		<signing.alias>pivotal</signing.alias>
		<signing.keystore>~/.keytool/pivotal.jks</signing.keystore>

		<dist.name>Pivotal tc Server Integration for Eclipse</dist.name>
		<dist.project>eclipse-integration-tcserver</dist.project>
		<dist.key>TOOLS</dist.key>
		<dist.target.classifier>eclipseintegrationtcserver-${dist.target}</dist.target.classifier>

		<!-- Common Properties -->
		<dist.type>snapshot</dist.type>
		<dist.bucket>dist.springsource.com</dist.bucket>
		<dist.platform.name></dist.platform.name>
		<dist.platform.version></dist.platform.version>
		<dist.platform.id></dist.platform.id>
		<dist.target></dist.target>
		<dist.properties>dist.properties</dist.properties>

		<dist.pathpostfix>nightly</dist.pathpostfix>
		<dist.path>${dist.type}/${dist.key}/${dist.project}/${dist.pathpostfix}</dist.path>

		<!-- general version path extension for all dependencies -->
		<dist.dependencies-version-path>${dist.pathpostfix}</dist.dependencies-version-path>

		<!-- individual version path extensions for all the dependencies -->
		<dist.spring-ide-version>${dist.dependencies-version-path}</dist.spring-ide-version>

		<skip.source.check>true</skip.source.check>

		<test.vmargs>${test.osvmargs}</test.vmargs>
		<test.osvmargs></test.osvmargs>
		<test.useUIThread>true</test.useUIThread>
		<test.skip>${maven.test.skip}</test.skip>

		<tycho-version>1.1.0</tycho-version>

		<maven.test.error.ignore>false</maven.test.error.ignore>
		<maven.test.failure.ignore>false</maven.test.failure.ignore>
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
		<encoding>UTF-8</encoding>
    
		<com.springsource.sts.tests.cache>${user.home}/.sts-test-cache</com.springsource.sts.tests.cache>
	</properties>

	<profiles>

		<profile>
			<id>e49</id>
			<properties>
				<dist.target>e4.9</dist.target>
				<dist.platform.name>2018-09</dist.platform.name>
				<dist.platform.id>2018-09</dist.platform.id>
				<dist.platform.version>4.9</dist.platform.version>
				<package.qualifierPrefix>e49</package.qualifierPrefix>
			</properties>
			<repositories>
				<repository>
					<id>platform</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/eclipse/updates/4.9/</url>
				</repository>
				<!-- composite update site contains http references, using exact https urls instead -->
				<!--				<repository>
				<id>2018-09</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/releases/2018-09/</url>
				</repository> -->
				<repository>
					<id>2018-09</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/releases/2018-09/201809191002</url>
				</repository>
				<repository>
					<id>2018-09-epp</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/technology/epp/packages/2018-09/</url>
				</repository>

				<repository>
					<id>swtbot</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/technology/swtbot/releases/latest/</url>
				</repository>
				<repository>
					<id>eclipse-integration-commons</id>
					<layout>p2</layout>
					<url>https://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.pathpostfix}</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>e410</id>
			<properties>
				<dist.target>e4.10</dist.target>
				<dist.platform.name>2018-12</dist.platform.name>
				<dist.platform.id>2018-12</dist.platform.id>
				<dist.platform.version>4.10</dist.platform.version>
				<package.qualifierPrefix>e410</package.qualifierPrefix>
			</properties>
			<repositories>
				<repository>
					<id>platform</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/eclipse/updates/4.10/</url>
				</repository>
				<!-- composite update site contains http references, using exact https urls instead -->
				<!--				<repository>
				<id>2018-12</id>
				<layout>p2</layout>
				<url>https://download.eclipse.org/releases/2018-12/</url>
				</repository> -->
				<repository>
					<id>2018-12</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/releases/2018-12/201812191000</url>
				</repository>
				<repository>
					<id>2018-12-epp</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/technology/epp/packages/2018-12/</url>
				</repository>

				<repository>
					<id>swtbot</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/technology/swtbot/releases/latest/</url>
				</repository>
				<repository>
					<id>eclipse-integration-commons</id>
					<layout>p2</layout>
					<url>https://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.pathpostfix}</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>e411</id>
			<properties>
				<dist.target>e4.11</dist.target>
				<dist.platform.name>2019-03</dist.platform.name>
				<dist.platform.id>2019-03</dist.platform.id>
				<dist.platform.version>4.11</dist.platform.version>
				<package.qualifierPrefix>e411</package.qualifierPrefix>
			</properties>
			<repositories>
				<repository>
					<id>platform</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/eclipse/updates/4.11/</url>
				</repository>
				<repository>
					<id>2019-03</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/releases/2019-03/</url>
				</repository>
				<repository>
					<id>swtbot</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/technology/swtbot/releases/latest/</url>
				</repository>
				<repository>
					<id>eclipse-integration-commons</id>
					<layout>p2</layout>
					<url>https://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.pathpostfix}</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>build.springsource.com</id>
			<activation>
				<property>
					<name>bamboo.buildNumber</name>
				</property>
			</activation>
			<properties>
				<test.vmargs>-Dhttp.proxyHost=proxy.eng.vmware.com -Dhttp.proxyPort=3128 -Dhttps.proxyHost=proxy.eng.vmware.com -Dhttps.proxyPort=3128 ${test.osvmargs}</test.vmargs>
				<p2.qualifier>CI-B${bamboo.buildNumber}</p2.qualifier>
				<p2.replaceQualifier>true</p2.replaceQualifier>
			</properties>
		</profile>

		<profile>
			<id>osx</id>
			<activation>
				<property>
					<name>java.vendor.url</name>
					<value>https://www.apple.com/</value>
				</property>
			</activation>
			<properties>
				<test.osvmargs>-Dosgi.ws=cocoa -XstartOnFirstThread</test.osvmargs>
			</properties>
		</profile>

		<profile>
			<id>bamboo-signing</id>
			<properties>
				<signing.store.password>${env.bamboo_signing_store_password}</signing.store.password>
				<signing.key.password>${env.bamboo_signing_store_password}</signing.key.password>
			</properties>
		</profile>

	</profiles>

	<repositories>

		<repository>
			<id>spring-ide</id>
			<layout>p2</layout>
			<url>https://dist.springframework.org/${dist.type}/IDE/${dist.spring-ide-version}</url>
		</repository>
	</repositories>
  
	<pluginRepositories>
		<!-- required for Maven and Ant AWS dependency -->
		<pluginRepository>
			<id>spring-maven-release</id>
			<name>Spring Maven Release Repository</name>
			<url>https://maven.springframework.org/release</url>
		</pluginRepository>
		<pluginRepository>
			<id>springsource-maven-release</id>
			<name>SpringSource Maven Release Repository</name>
			<url>https://repository.springsource.com/maven/bundles/release</url>
		</pluginRepository>
		<pluginRepository>
			<id>tycho-staging</id>
			<url>https://oss.sonatype.org/content/repositories/orgeclipsetycho-115/</url>
		</pluginRepository>
		<pluginRepository>
			<id>tycho-snapshots</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<extensions>
			<extension>
				<groupId>org.springframework.build.aws</groupId>
				<artifactId>org.springframework.build.aws.maven</artifactId>
				<version>3.1.0.RELEASE</version>
			</extension>
		</extensions>
		<plugins>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<useUIThread>${test.useUIThread}</useUIThread>
					<testSuite>${test.suite}</testSuite>
					<testClass>${test.class}</testClass>
					<dependencies>
						<!-- needed but not inferred from plugin dependencies: -->
						<dependency>
							<type>eclipse-plugin</type>
							<artifactId>org.eclipse.ui.workbench</artifactId>
							<version>0.0.0</version>
						</dependency>
						<dependency>
							<type>eclipse-plugin</type>
							<artifactId>org.eclipse.equinox.ds</artifactId>
							<version>0.0.0</version>
						</dependency>
						<dependency>
							<type>eclipse-plugin</type>
							<artifactId>org.eclipse.equinox.event</artifactId>
							<version>0.0.0</version>
						</dependency>
					</dependencies>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>git</executable>
					<arguments>
						<argument>log</argument>
						<argument>--pretty=format:source.control.id=%H</argument>
						<argument>-n1</argument>
					</arguments>
					<outputFile>${project.build.directory}/git.properties</outputFile>
					<successCodes>
						<successCode>0</successCode>
						<successCode>1</successCode>
						<successCode>127</successCode>
						<successCode>128</successCode>
					</successCodes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.0-alpha-2</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>read-project-properties</goal>
						</goals>
						<configuration>
							<files>
								<file>${project.build.directory}/git.properties</file>
							</files>
							<!-- do not fail if properties file does not exist to support, required to build eclipse-repository projects -->
							<quiet>true</quiet>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<id>sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skip>${signing.skip}</skip>
					<alias>${signing.alias}</alias>
					<keystore>${signing.keystore}</keystore>
					<storepass>${signing.store.password}</storepass>
					<keypass>${signing.key.password}</keypass>
<!--					<tsa>https://ca.signfiles.com/tsa/get.aspx</tsa> -->
					<tsa>http://sha256timestamp.ws.symantec.com/sha256/timestamp</tsa>
				</configuration>
			</plugin>

		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<dependency-resolution>
							<extraRequirements>
								<requirement>
									<type>eclipse-plugin</type>
									<id>org.eclipse.core.runtime</id>
									<!-- TODO assume versionRange=0.0.0 when no <versionRange> element is present  -->
									<versionRange>0.0.0</versionRange>
								</requirement>
								<requirement>
									<type>eclipse-plugin</type>
									<id>org.eclipse.equinox.event</id>
									<versionRange>0.0.0</versionRange>
								</requirement>
								<requirement>
									<type>eclipse-plugin</type>
									<id>org.apache.felix.scr</id>
									<versionRange>0.0.0</versionRange>
								</requirement>
							</extraRequirements>
						</dependency-resolution>
						<resolver>p2</resolver>
						<pomDependencies>consider</pomDependencies>
						<ignoreTychoRepositories>true</ignoreTychoRepositories>
						<environments>
							<environment>
								<os>macosx</os>
								<ws>cocoa</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>win32</os>
								<ws>win32</ws>
								<arch>x86</arch>
							</environment>
							<environment>
								<os>win32</os>
								<ws>win32</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>linux</os>
								<ws>gtk</ws>
								<arch>x86</arch>
							</environment>
							<environment>
								<os>linux</os>
								<ws>gtk</ws>
								<arch>x86_64</arch>
							</environment>
						</environments>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<format>yyyyMMddHHmm-'${p2.qualifier}'</format>
						<archiveSite>true</archiveSite>
						<archive>
							<manifestEntries>
								<Source-Control-Identifier>${source.control.id}</Source-Control-Identifier>
							</manifestEntries>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.4.3</version>
					<configuration>
						<encoding>ISO-8859-1</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.6</version>
					<dependencies>  
						<dependency>  
							<groupId>ant-contrib</groupId>  
							<artifactId>ant-contrib</artifactId>  
							<version>1.0b3</version>  
							<exclusions>  
								<exclusion>  
									<groupId>ant</groupId>  
									<artifactId>ant</artifactId>  
								</exclusion>  
							</exclusions>  
						</dependency>  
						<dependency>  
							<groupId>org.apache.ant</groupId>  
							<artifactId>ant-nodeps</artifactId>  
							<version>1.8.1</version>  
						</dependency>  
						<dependency>
							<groupId>org.springframework.build</groupId>
							<artifactId>org.springframework.build.aws.ant</artifactId>
							<version>3.0.6.RELEASE</version>
						</dependency>
						<dependency>
							<groupId>net.java.dev.jets3t</groupId>
							<artifactId>jets3t</artifactId>
							<version>0.8.1</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<findbugsXmlOutput>true</findbugsXmlOutput>
						<failOnError>false</failOnError>
						<skip>${skip.source.check}</skip>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<sourceEncoding>utf-8</sourceEncoding>
						<minimumTokens>100</minimumTokens>
						<targetJdk>1.5</targetJdk>
						<format>xml</format>
						<failOnViolation>false</failOnViolation>
						<skip>${skip-source-check}</skip>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>cpd-check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<skip>${test.skip}</skip> 
						<useUIThread>${test.useUIThread}</useUIThread>
						<useUIHarness>true</useUIHarness>
						<forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
						<showEclipseLog>true</showEclipseLog>
						<testSuite>${project.artifactId}</testSuite>
						<testClass>${test.class}</testClass>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.io.tmpdir=${project.build.directory} -Dcom.springsource.sts.tests.cache=${com.springsource.sts.tests.cache} -Duser.home=${project.build.directory} ${test.vmargs}</argLine>
						<appArgLine>
							-eclipse.keyring ${project.build.directory}/keystore -eclipse.password ${project.build.directory}/keystore.password
						</appArgLine>

						<bundleStartLevel>
							<bundle>
								<id>org.eclipse.equinox.event</id>
								<level>2</level>
								<autoStart>true</autoStart>
							</bundle>
							<bundle>
								<id>org.apache.felix.scr</id>
								<level>2</level>
								<autoStart>true</autoStart>
							</bundle>
						</bundleStartLevel>

					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
